--- a/src/app/components/journey-form/journey-form.component.html
+++ b/src/app/components/journey-form/journey-form.component.html
@@ -1,14 +1,36 @@
-<div>
+<header class="header">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-6 mt-2 mb-2">
+        <h1>Newshore</h1>
+      </div>
+    </div>
+  </div>
+</header>
+  
+<div class="banner-container">
+  <img src="https://i.imgur.com/0oQWHNt.jpg" alt="Banner" class="img-fluid">
+</div>
+<div class="container d-flex justify-content-center align-items-center my-4">
 	<form (ngSubmit)="calculateJourney()" #journeyForm="ngForm">
-			<div>
-				<label for="originInput">Origen:</label>
+			<div class="form-group">
+				<label class="mr-2" for="originInput">Origen:</label>
 				<input id="originInput" type="text" name="origin" [(ngModel)]="origin" maxlength="3" required (input)="onInputToUpper($event)">
 			</div>
-			<div>
-				<label for="destinationInput">Destino:</label>
+			<div class="form-group">
+				<label class="mr-2" for="destinationInput">Destino:</label>
 				<input id="destinationInput" type="text" name="destination" [(ngModel)]="destination" maxlength="3" required (input)="onInputToUpper($event)">
 			</div>
-			<button type="submit" [disabled]="!journeyForm.valid">Buscar ruta</button>
+			<button class="search-button" type="submit" [disabled]="!journeyForm.valid">Buscar ruta</button>
 		</form> 
 </div>
 
+<footer class="footer">
+  <div>
+    <div class="row">
+      <div class="col text-center">
+        <p>&copy; 2023 Todos los derechos reservados.</p>
+      </div>
+    </div>
+  </div>
+</footer>
