--- a/src/app/components/journey-form/journey-form.component.html
+++ b/src/app/components/journey-form/journey-form.component.html
@@ -15,17 +15,37 @@
 	<form (ngSubmit)="calculateJourney()" #journeyForm="ngForm">
 			<div class="form-group">
 				<label class="mr-2" for="originInput">Origen:</label>
-				<input id="originInput" type="text" name="origin" [(ngModel)]="origin" maxlength="3" required (input)="onInputToUpper($event)">
+				<input class="pl-1" id="originInput" type="text" name="origin" [(ngModel)]="origin" maxlength="3" required (input)="onInputToUpper($event)">
 			</div>
 			<div class="form-group">
 				<label class="mr-2" for="destinationInput">Destino:</label>
-				<input id="destinationInput" type="text" name="destination" [(ngModel)]="destination" maxlength="3" required (input)="onInputToUpper($event)">
+				<input class="pl-1" id="destinationInput" type="text" name="destination" [(ngModel)]="destination" maxlength="3" required (input)="onInputToUpper($event)">
 			</div>
 			<button class="search-button" type="submit" [disabled]="!journeyForm.valid">Buscar ruta</button>
-		</form> 
+		</form>
 </div>
 
-<footer class="footer">
+<div class="mb-5 pl-5 container justify-content-center align-items-center my-4" *ngIf="journey">
+	<div>
+		<h4>Vuelo:</h4>
+		<p>Origen: {{ journey.origin }}</p>
+		<p>Destino: {{ journey.destination }}</p>
+		<p>Precio Total: {{ journey.price }}</p>
+	</div>
+	<div class="pt-2">
+		<h4>Ruta de vuelo:</h4>
+		<ul>
+			<li *ngFor="let flight of journey.flights">
+				<p>Transporte: {{ flight.transport.flightCarrier }} - {{ flight.transport.flightNumber }}</p>
+				<p>Origen: {{ flight.departureStation }}</p>
+				<p>Destino: {{ flight.arrivalStation }}</p>
+				<p>Precio: {{ flight.price }}</p>
+			</li>
+		</ul>
+	</div>
+</div>
+
+<footer class="container-fluid footer">
   <div>
     <div class="row">
       <div class="col text-center">
