--- a/src/app/components/journey-form/journey-form.component.css
+++ b/src/app/components/journey-form/journey-form.component.css
@@ -8,7 +8,7 @@
 }
 
 .flight-detail-container {
-	padding-left: 95px;
+	padding-left: 135px;
 }
 
 .search-button {
@@ -28,7 +28,13 @@
 }
 
 .banner-container {
-  padding: 20px;
+	background: url('https://i.imgur.com/0oQWHNt.jpg') no-repeat;
+  padding: 10px;
+	width: 100%;
+	height: 220px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 h1 {
