--- a/src/app/components/journey-form/journey-form.component.html
+++ b/src/app/components/journey-form/journey-form.component.html
@@ -36,7 +36,7 @@
 	<p>Cargando...</p>
 </div>
 
-<div class="text-center" *ngIf="!hasData">
+<div class="text-center" *ngIf="!hasData && !isLoading">
 	<p>Su consulta no pudo ser procesada.</p>
 </div>
 
@@ -45,9 +45,9 @@
 		<h4>Vuelo:</h4>
 		<p>Origen: {{ journey.origin | uppercase }}</p>
 		<p>Destino: {{ journey.destination }}</p>
-		<p *ngIf="currency === 'USD'">Precio Total: ${{ journey.price }}</p>
-		<p *ngIf="currency === 'EUR'">Precio Total: €{{ journey.price }}</p>
-		<p *ngIf="currency === 'GBP'">Precio Total: £{{ journey.price }}</p>
+		<p *ngIf="currency === 'USD'">Precio total: ${{ journey.price }}</p>
+		<p *ngIf="currency === 'EUR'">Precio total: €{{ journey.price }}</p>
+		<p *ngIf="currency === 'GBP'">Precio total: £{{ journey.price }}</p>
 	</div>
 	<div class="pt-2">
 		<h4>Ruta de vuelo:</h4>
