Se aplican mejoras en los estilos y se edita el archivo README.md

--- a/src/app/components/journey-form/journey-form.component.css
+++ b/src/app/components/journey-form/journey-form.component.css
@@ -54,10 +54,21 @@ h1 {
   width: 100%;
 }
 
+.text-field {
+	border: none;
+	border-radius: 5px;
+}
+
 p {
 	margin-bottom: 0.25rem;
 }
 
 li {
 	margin-left: 20px;
+}
+
+@media (max-width: 600px) {
+  .flight-detail-container {
+		padding-left: 45px;
+	}
 }
