--- a/src/app/components/journey-form/journey-form.component.css
+++ b/src/app/components/journey-form/journey-form.component.css
@@ -4,11 +4,11 @@
 }
 
 .container {
-	padding: 20px;
+	padding: 1.25rem;
 }
 
 .flight-detail-container {
-	padding-left: 135px;
+	padding-left: 8.44rem;
 }
 
 .large-button, .small-button {
@@ -19,15 +19,15 @@
 .search-button:disabled {
 	background-color: lightgray;
 	color: black;
-	border-radius: 10px;
-	padding: 10px;
+	border-radius: 0.63rem;
+	padding: 0.63rem;
 }
 
 .banner-container {
 	background: url('https://i.imgur.com/0oQWHNt.jpg') no-repeat;
   padding: 10px;
 	width: 100%;
-	height: 260px;
+	height: 16.25rem;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -44,7 +44,7 @@ h1 {
 
 .footer {
   flex-shrink: 0;
-  padding: 10px 0;
+  padding: 0.63rem 0;
   position: fixed;
   bottom: 0;
   width: 100%;
@@ -58,7 +58,7 @@ h1 {
 
 .text-field {
 	border: none;
-	border-radius: 5px;
+	border-radius: 0.31rem;
 }
 
 .large-button:disabled,
@@ -71,7 +71,7 @@ h1 {
 
 .form-container {
   position: relative;
-  bottom: 68px;
+  bottom: 4.25rem;
 }
 .search-container {
   border-bottom-left-radius: 0.5rem;
@@ -79,7 +79,7 @@ h1 {
 }
 
 .bottom-space {
-	padding-bottom: 100px;
+	padding-bottom: 6.25rem;
 }
 
 p {
@@ -87,12 +87,12 @@ p {
 }
 
 li {
-	margin-left: 20px;
+	margin-left: 1.25rem;
 }
 
 @media (max-width: 600px) {
   .flight-detail-container {
-		padding-left: 45px;
+		padding-left: 2.81rem;
 	}
 }
 
