Pequeños cambios en JourneyFormComponent

--- a/src/app/components/journey-form/journey-form.component.html
+++ b/src/app/components/journey-form/journey-form.component.html
@@ -55,7 +55,7 @@
 	<p>Su consulta no pudo ser procesada.</p>
 </div>
 
-<div class="mb-5 flight-detail-container justify-content-center align-items-center" *ngIf="journey">
+<div id="target" class="mb-5 flight-detail-container justify-content-center align-items-center" *ngIf="journey">
 	<div>
 		<h4>Vuelo:</h4>
 		<p>Origen: {{ journey.origin | uppercase }}</p>
